--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
+    "react-qrcode-logo": "^2.9.0",
     "three": "^0.152.2"
   },
   "devDependencies": {
